<resources>
    <string name="app_name">Instagram</string>
    <string name="logo">Logo</string>
    <string name="login_email_adress">Login email adress</string>
    <string name="e_mail">E-mail</string>
    <string name="password_login">Password login</string>
    <string name="password">Password</string>
    <string name="button_login">Button login</string>
    <string name="login">Login</string>
    <string name="register_user">Register User</string>
    <string name="register_here">Register here!</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="loading">Loading</string>
    <string name="posts">Posts</string>
    <string name="_0">0</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="open_camera">Open Camera</string>
    <string name="filters">Filters</string>
    <string name="grid_photo">grid photo</string>
    <string name="user_name">USER NAME</string>
    <string name="_0_likes">0 Likes</string>
    <string name="description">Description</string>
    <string name="feed_image">Feed Image</string>
</resources>
