<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
       android:layout_margin="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageFeedAdapter"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/textNameFeedAdapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <com.course.instagram.helper.SquareImageView
        android:id="@+id/squareImageFeed"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/feed_image"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">

        <com.like.LikeButton
            android:id="@+id/buttonLikeFeed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            app:icon_size="25dp"
            app:icon_type="heart" />

        <ImageView
            android:id="@+id/imageCommentsFeed"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/comentario" />


    </LinearLayout>

    <TextView
        android:id="@+id/textLikesFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/_0_likes"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescriptionFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="8dp"
        android:text="@string/description"
        android:textSize="16sp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>