<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".activities.RegisterActivity">

    <ImageView
        android:id="@+id/imageLogoRegister"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/editNameRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editNameRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_text_box"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editEmailRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogoRegister" />

    <EditText
        android:id="@+id/editEmailRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_text_box"
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editPasswordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNameRegister" />

    <EditText
        android:id="@+id/editPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_text_box"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editConfirmPasswordRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailRegister" />

    <EditText
        android:id="@+id/editConfirmPasswordRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_text_box"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPasswordRegister" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/background_button_login"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editConfirmPasswordRegister" />

    <ProgressBar
        android:id="@+id/progressBarRegister"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.19999999" />
</androidx.constraintlayout.widget.ConstraintLayout>