<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.PostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <include layout="@layout/toolbar"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleViewPost"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/profile" />

        <TextView
            android:id="@+id/textUserNamePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:text="@string/user_name"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewPostActivity"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/textPostLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="16dp"
        android:text="@string/_0_likes"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPostDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:text="@string/description"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textPostComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="16dp"
        android:text="View Comments"
        android:textSize="16sp" />

    </LinearLayout>

</ScrollView>