<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment"
    android:background="@color/color_light_grey">

    <ProgressBar
        android:id="@+id/progressBarProfile"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <TextView
        android:id="@+id/textPosts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/posts"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline7" />

    <TextView
        android:id="@+id/textView99"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/followers"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/buttonActionProfile"
        app:layout_constraintEnd_toStartOf="@+id/textView97"
        app:layout_constraintStart_toEndOf="@+id/textPosts" />

    <TextView
        android:id="@+id/textView97"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/following"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/buttonActionProfile"
        app:layout_constraintEnd_toStartOf="@+id/guideline8" />

    <TextView
        android:id="@+id/textProfilePosts"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textPosts"
        app:layout_constraintEnd_toEndOf="@+id/textPosts"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textProfileFollowers"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView99"
        app:layout_constraintEnd_toEndOf="@+id/textView99"
        app:layout_constraintStart_toStartOf="@+id/textView99"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textProfileFollowing"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView97"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/textView97"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonActionProfile"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="@drawable/background_button_profile"
        android:gravity="center|center_vertical"
        android:text="@string/edit_profile"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline8"
        app:layout_constraintStart_toStartOf="@+id/guideline7"
        app:layout_constraintTop_toTopOf="@+id/guideline9" />

    <GridView
        android:id="@+id/gridViewProfilePage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:numColumns="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonActionProfile"
        app:layout_constraintVertical_bias="0.497" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.116743475" />
</androidx.constraintlayout.widget.ConstraintLayout>